Refactored Author components